# Mouse2VR-Treadmill-Bridge

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DEBUGGING.md  README.md  build_full_test.bat  build_test.bat  build_webview.bat  config.json  diagnose_config  diagnose_config.cpp  non_existent_file.json  run_tests.bat  test_full_pipeline.cpp  test_mouse_input.cpp  test_runner.sh  test_simple_window.cpp  test_speed_calc  test_speed_calc.cpp  test_summary.json
.github/workflows/: build-winui.yml  build.yml  test.yml
build_test/: CMakeCache.txt  CTestTestfile.cmake  Mouse2VR_Tests[1]_include.cmake  Mouse2VR_Tests[1]_tests.cmake  cmake_install.cmake
build_test/Mouse2VRCore.dir/Debug/: Mouse2VRCore.lib.recipe
build_test/Mouse2VRCore.dir/Debug/Mouse2VRCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_test/Mouse2VR_Tests.dir/Debug/: Mouse2VR_Tests.exe.recipe
build_test/Mouse2VR_Tests.dir/Debug/Mouse2VR_Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_test/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
include/common/: Logger.h  WindowsHeaders.h
include/config/: ConfigManager.h
include/core/: ConfigManager.h  InputProcessor.h  Mouse2VRCore.h  PathUtils.h  RawInputHandler.h  TestInterfaces.h  ViGEmController.h
include/input/: RawInputHandler.h
include/output/: ViGEmController.h
include/processing/: InputProcessor.h
include/ui/: MainWindow.h
scripts/: README_UI_MIGRATION.md  extract_html.py  inline_html.py  inline_html_DEPRECATED.py  update_html.bat
src/: Mouse2VR_GUI.manifest  main.cpp  main_gui.cpp  test_minimal_gui.cpp
src/config/: ConfigManager.cpp
src/console/: main.cpp
src/core/: ConfigManager.cpp  InputProcessor.cpp  Logger.cpp  Mouse2VRCore.cpp  PathUtils.cpp  RawInputHandler.cpp  ViGEmController.cpp
src/input/: RawInputHandler.cpp
src/output/: ViGEmController.cpp
src/processing/: InputProcessor.cpp
src/ui/: MainWindow.cpp
src/webview/: Bridge.h  SystemTray.cpp  SystemTray.h  WebViewWindow.cpp  WebViewWindow.h  WebViewWindow_HTML.h  main.cpp
src/webview/ui/: README.md  app.js  index.html  index_dev.html  styles.css
src/winui/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Mouse2VR_WinUI.vcxproj  main.cpp  packages.config  pch.h
tests/: SettingsValidationTest.cpp  test_config_manager.cpp  test_core.cpp  test_input_processor.cpp  test_main.cpp
